Final results for model based collaorative filtering

--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "39395f15",
    "metadata": {},
    "outputs": [],
@@ -23,13 +23,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "# -------------------------------------\n",
-    "from surprise import Reader, Dataset, KNNBasic\n",
+    "from surprise import Reader, Dataset, KNNBasic, SVD, SVDpp, NMF\n",
     "from surprise.model_selection import cross_validate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "9b815ec0",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "3765b256",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "7b76fc97",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "581a3d6b",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "d81fd8e5",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "0263c215",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "dfdef337",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "6b70998f",
    "metadata": {},
    "outputs": [],
@@ -599,6 +599,196 @@
     "For the same reason of rating popular movies, the Item-Based model likely suffered from the 'Long Tail' problem, where thousands of movies have very few ratings, making their similarity scores unreliable.\n",
     "\n",
     "We also observed that increasing the neighborhood size (K) from 3 to 10  reduced error rates. This suggests that relying on a very small number of neighbors (K=3) makes the model sensitive to outliers, whereas (K=10) provides a more robust average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f49fe627",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Model-Based Cross-Validation with default models as implemented by surprise...\n",
+      "\n",
+      "--- Evaluating SVD ---\n",
+      "SVD -> MSE: 0.7627, MAE: 0.6714\n",
+      "\n",
+      "--- Evaluating SVD++ ---\n",
+      "SVD++ -> MSE: 0.7393, MAE: 0.6590\n",
+      "\n",
+      "--- Evaluating NMF ---\n",
+      "NMF -> MSE: 0.8496, MAE: 0.7060\n",
+      "\n",
+      "========================================\n",
+      "FINAL MODEL COMPARISON RESULTS\n",
+      "========================================\n",
+      "Model      MSE      MAE\n",
+      "  SVD 0.762678 0.671434\n",
+      "SVD++ 0.739326 0.659041\n",
+      "  NMF 0.849614 0.706004\n",
+      "----------------------------------------\n",
+      "Best MSE: 0.7393 (Model: SVD++)\n",
+      "Best MAE: 0.6590 (Model: SVD++)\n",
+      "========================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the models to evaluate\n",
+    "models = {\n",
+    "    'SVD': SVD(random_state=42),\n",
+    "    'SVD++': SVDpp(random_state=42),\n",
+    "    'NMF': NMF(random_state=42)\n",
+    "}\n",
+    "\n",
+    "model_results = []\n",
+    "\n",
+    "print(\"Running Model-Based Cross-Validation with default models as implemented by surprise...\")\n",
+    "\n",
+    "# Iterate through models and run 5-fold CV\n",
+    "for name, algo in models.items():\n",
+    "    print(f\"\\n--- Evaluating {name} ---\")\n",
+    "    cv_res = cross_validate(algo, surprise_data, measures=['MSE', 'MAE'], cv=5, verbose=False)\n",
+    "    \n",
+    "    avg_mse = cv_res['test_mse'].mean()\n",
+    "    avg_mae = cv_res['test_mae'].mean()\n",
+    "    \n",
+    "    model_results.append({\n",
+    "        'Model': name,\n",
+    "        'MSE': avg_mse,\n",
+    "        'MAE': avg_mae\n",
+    "    })\n",
+    "    print(f\"{name} -> MSE: {avg_mse:.4f}, MAE: {avg_mae:.4f}\")\n",
+    "\n",
+    "# Create a DataFrame for the final table\n",
+    "final_model_df = pd.DataFrame(model_results)\n",
+    "\n",
+    "# 4. Highlight the best metrics programmatically\n",
+    "best_mse_val = final_model_df['MSE'].min()\n",
+    "best_mae_val = final_model_df['MAE'].min()\n",
+    "\n",
+    "# 5. Display the Final Table\n",
+    "print(\"\\n\" + \"=\"*40)\n",
+    "print(\"FINAL MODEL COMPARISON RESULTS\")\n",
+    "print(\"=\"*40)\n",
+    "print(final_model_df.to_string(index=False))\n",
+    "print(\"-\" * 40)\n",
+    "print(f\"Best MSE: {best_mse_val:.4f} (Model: {final_model_df.loc[final_model_df['MSE'] == best_mse_val, 'Model'].values[0]})\")\n",
+    "print(f\"Best MAE: {best_mae_val:.4f} (Model: {final_model_df.loc[final_model_df['MAE'] == best_mae_val, 'Model'].values[0]})\")\n",
+    "print(\"=\"*40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "506abe63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Model-Based Cross-Validation, the dimention of the latent space was choosen to be 5 for all three algorithms...\n",
+      "\n",
+      "--- Evaluating SVD ---\n",
+      "SVD -> MSE: 0.7561, MAE: 0.6685\n",
+      "\n",
+      "--- Evaluating SVD++ ---\n",
+      "SVD++ -> MSE: 0.7413, MAE: 0.6598\n",
+      "\n",
+      "--- Evaluating NMF ---\n",
+      "NMF -> MSE: 0.7625, MAE: 0.6690\n",
+      "\n",
+      "========================================\n",
+      "FINAL MODEL COMPARISON RESULTS\n",
+      "========================================\n",
+      "Model      MSE      MAE\n",
+      "  SVD 0.756147 0.668484\n",
+      "SVD++ 0.741282 0.659827\n",
+      "  NMF 0.762510 0.668987\n",
+      "----------------------------------------\n",
+      "Best MSE: 0.7413 (Model: SVD++)\n",
+      "Best MAE: 0.6598 (Model: SVD++)\n",
+      "========================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the models to evaluate _ this time with n_factors \n",
+    "models_nf = {\n",
+    "    'SVD': SVD(n_factors=5, random_state=42),\n",
+    "    'SVD++': SVDpp(n_factors=5, random_state=42),\n",
+    "    'NMF': NMF(n_factors=5, biased=True, random_state=42)\n",
+    "}\n",
+    "\n",
+    "model_results_nf = []\n",
+    "\n",
+    "print(\"Running Model-Based Cross-Validation, the dimention of the latent space was choosen to be 5 for all three algorithms...\")\n",
+    "\n",
+    "# Iterate through models and run 5-fold CV\n",
+    "for name, algo in models_nf.items():\n",
+    "    print(f\"\\n--- Evaluating {name} ---\")\n",
+    "    cv_res = cross_validate(algo, surprise_data, measures=['MSE', 'MAE'], cv=5, verbose=False)\n",
+    "    \n",
+    "    avg_mse = cv_res['test_mse'].mean()\n",
+    "    avg_mae = cv_res['test_mae'].mean()\n",
+    "    \n",
+    "    model_results_nf.append({\n",
+    "        'Model': name,\n",
+    "        'MSE': avg_mse,\n",
+    "        'MAE': avg_mae\n",
+    "    })\n",
+    "    print(f\"{name} -> MSE: {avg_mse:.4f}, MAE: {avg_mae:.4f}\")\n",
+    "\n",
+    "# Create a DataFrame for the final table\n",
+    "final_model_df_with_nf = pd.DataFrame(model_results_nf)\n",
+    "\n",
+    "# 4. Highlight the best metrics programmatically\n",
+    "best_mse_val_nf = final_model_df_with_nf['MSE'].min()\n",
+    "best_mae_val_nf = final_model_df_with_nf['MAE'].min()\n",
+    "\n",
+    "# 5. Display the Final Table\n",
+    "print(\"\\n\" + \"=\"*40)\n",
+    "print(\"FINAL MODEL COMPARISON RESULTS\")\n",
+    "print(\"=\"*40)\n",
+    "print(final_model_df_with_nf.to_string(index=False))\n",
+    "print(\"-\" * 40)\n",
+    "print(f\"Best MSE: {best_mse_val_nf:.4f} (Model: {final_model_df_with_nf.loc[final_model_df_with_nf['MSE'] == best_mse_val_nf, 'Model'].values[0]})\")\n",
+    "print(f\"Best MAE: {best_mae_val_nf:.4f} (Model: {final_model_df_with_nf.loc[final_model_df_with_nf['MAE'] == best_mae_val_nf, 'Model'].values[0]})\")\n",
+    "print(\"=\"*40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4dbfe94",
+   "metadata": {},
+   "source": [
+    "### Summary of Model-Based Approaches\n",
+    "\n",
+    "In this section, we evaluated three Matrix Factorization algorithms: **SVD**, **SVD++**, and **NMF**. We conducted the experiment in two phases: first using the library's default hyperparameters, and second by standardizing the latent dimension ($k$) to ensure a fair comparison.\n",
+    "\n",
+    "#### 1. Hyperparameter Tuning\n",
+    "* **Default Dimensions:** The default `n_factors` (k) in the Surprise library vary significantly between models (SVD: $k=100$, SVD++: $k=20$, NMF: $k=15$).\n",
+    "* **Standardized Dimensions:** To compare the algorithms fairly, we tested setting `n_factors` to both 5 and 50 for all models. We observed that **$k=5$ yielded better results** (likely due to the small size of the dataset avoiding overfitting), so we used $k=5$ for the final comparison.\n",
+    "* **Biased NMF:** In the second phase, we explicitly set `biased=True` for the NMF model (default is False). This allowed NMF to learn user and item biases, ensuring that the primary structural difference remaining between it and SVD was the non-negative constraint.\n",
+    "* **Regularization:** We attempted to standardize the regularization for NMF to `0.02` (to match SVD/SVD++), but this degraded performance. We decided to keep NMF at its default regularization of `0.06`.\n",
+    "\n",
+    "#### 2. Results & Interpretation\n",
+    "The final results show that **SVD++** performed best, followed by **SVD**, with **NMF** performing the worst.\n",
+    "\n",
+    "* **1st Place: SVD++**\n",
+    "    * **Reason:** It achieves the lowest error because it incorporates **implicit feedback**. It accounts not just for the explicit rating value, but also for the fact that a user *chose* to rate an item at all. This additional layer of information is crucial for sparse datasets like ours.\n",
+    "\n",
+    "* **2nd Place: SVD**\n",
+    "    * **Reason:** SVD performs well because it uses **standard Matrix Factorization**, allowing latent factors to be negative. This flexibility allows the model to capture complex user preferences (e.g., a \"negative\" affinity for a specific genre). Additionally, SVD includes **bias terms** (user and item biases), which helps separate user leniency from actual preference.\n",
+    "\n",
+    "* **3rd Place: NMF**\n",
+    "    * **Reason:** NMF had the highest error. This is expected for two reasons:\n",
+    "        1.  **Non-Negative Constraint:** By forcing all factors to be positive ($\\ge 0$), the model loses the ability to represent \"dislike\" or negative correlations effectively.\n",
+    "        2.  **Lack of Bias:** The default NMF implementation is unbiased, meaning it does not account for the fact that some users inherently rate higher or some movies are inherently more popular."
    ]
   }
  ],
